--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <script src="./app.js"></script>
   </head>
   <body style="background-color: #1c1b21; text-align: center">
-    <img src="./logo.svg" alt="" />
+    <div class="filter"></div>
   </body>
 </html>
