--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Book-site</title>
-    <script src="./app.js"></script>
+    <script src="./app.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body style="background-color: #1c1b21; text-align: center">
-    <div class="filter"></div>
+    <div class="wrapper"></div>
+    <button class="button" onclick="generate()">Generate</button>
   </body>
 </html>
