--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book-site</title>
-    <script src="./app.js" defer></script>
-    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
+    <script src="./dist/app.js" type="module"></script>
+    <link rel="stylesheet" href="./dist/bundle.css" />
+    <link rel="stylesheet" href="./static/global.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body style="background-color: #1c1b21; text-align: center">
-    <div class="wrapper"></div>
-    <button class="button" onclick="generate()">Generate</button>
+  <body>
+    <div id="root"></div>
   </body>
 </html>
